--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,11 @@ shoryuken.yml
 *.log
 .env
 rubocop.html
+.idea/.rakeTasks
+.idea/dbnavigator.xml
+.idea/encodings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/shoryuken.iml
+.idea/vcs.xml
+.idea/workspace.xml
